fix card broken layout

--- a/airbyte-webapp/src/components/ui/Card/Card.module.scss
+++ b/airbyte-webapp/src/components/ui/Card/Card.module.scss
@@ -19,8 +19,6 @@
 }
 
 .header {
-  display: flex;
-  align-items: center;
   padding: variables.$spacing-xl;
   color: colors.$dark-blue;
   border-bottom: colors.$grey-100 variables.$border-thin solid;
@@ -35,6 +33,11 @@
 
   &.roundedBottom {
     border-radius: 10px;
+  }
+
+  &.withDescription {
+    display: flex;
+    align-items: center;
   }
 }
 
